# loco-ai-app

./: Cargo.toml  myapp_development.sqlite-shm  myapp_development.sqlite-wal
.github/workflows/: ci.yaml
config/: development.yaml  test.yaml
convex/: games.ts  schema.ts
frontend/: .env  README.md  package-lock.json  package.json
frontend/src/components/: EmojiGame.tsx
migration/: Cargo.toml
migration/src/: lib.rs  m20231220_000001_agents.rs  m20231220_000002_tasks.rs  m20231220_000003_memory.rs  m20231220_000004_knowledge.rs
src/: main.py
src/controllers/: auth.rs
src/mailers/: auth.rs
src/mailers/auth/forgot/: text.t
src/mailers/auth/welcome/: subject.t  text.t
src/models/: users.rs
src/models/_entities/: mod.rs  prelude.rs  users.rs
src/tasks/: seed.rs
tests/examples/: playground.rs
tests/requests/: auth.rs
